--- a/HW_2/HW_2.ipynb
+++ b/HW_2/HW_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "Name: content_type_id, dtype: float64"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
        "112            1.0        131 111 81       185.0   45.0           6.0  concept  "
       ]
      },
-     "execution_count": 199,
+     "execution_count": 281,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
        "Name: tags, dtype: object"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1030,7 @@
        "[5 rows x 89 columns]"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 291,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,11 +1064,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.merge(train, tags_, left_on = train.index, right_on = tags_.index, how = 'left')"
+    "train = pd.merge(train, tags_, left_index=True, right_index=True, how = 'left')"
    ]
   },
   {
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -1223,9 +1223,8 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1244 entries, 0 to 1243\n",
-      "Data columns (total 107 columns):\n",
-      "key_0                             1244 non-null int64\n",
+      "Int64Index: 1244 entries, 18 to 99888\n",
+      "Data columns (total 106 columns):\n",
       "timestamp                         1244 non-null int64\n",
       "user_id                           1244 non-null int32\n",
       "content_id                        1244 non-null int16\n",
@@ -1239,10 +1238,10 @@
       "correct_answer                    1244 non-null uint8\n",
       "part_question                     1244 non-null uint8\n",
       "tags                              1244 non-null object\n",
-      "lecture_id                        1244 non-null uint32\n",
-      "tag                               1244 non-null uint8\n",
-      "part_lecture                      1244 non-null uint8\n",
-      "type_of                           1244 non-null category\n",
+      "lecture_id                        1244 non-null float64\n",
+      "tag                               1244 non-null float64\n",
+      "part_lecture                      1244 non-null float64\n",
+      "type_of                           1244 non-null object\n",
       "tag_1                             1244 non-null int64\n",
       "tag_10                            1244 non-null int64\n",
       "tag_100                           1244 non-null int64\n",
@@ -1332,8 +1331,8 @@
       "tag_96                            1244 non-null int64\n",
       "tag_97                            1244 non-null int64\n",
       "tag_98                            1244 non-null int64\n",
-      "dtypes: category(1), int16(2), int32(1), int64(91), object(1), uint16(1), uint32(3), uint8(7)\n",
-      "memory usage: 940.5+ KB\n"
+      "dtypes: float64(3), int16(2), int32(1), int64(90), object(2), uint16(1), uint32(2), uint8(5)\n",
+      "memory usage: 1000.9+ KB\n"
      ]
     }
    ],
