🐞 fix(HW-2): Fix tag dtype

--- a/HW_2/HW_2.ipynb
+++ b/HW_2/HW_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import pandas as pd\n",
     "from numpy import random\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "# import dask.dataframe as dd"
    ]
   },
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -116,19 +117,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data cleaning\n",
-    "- убираются пустые ячейки (строка 1)\n",
-    "- признак `prior_question_had_explanation` преобразуется в `int8` (строки 2 - 6)\n",
-    "- признак `prior_question_elapsed_time` преобразуется в секунды. Так как после этого данные укладываются в 2 байта\n",
-    "признак преобразуется в `int16`"
+    "## Data cleaning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +333,7 @@
        "Name: content_type_id, dtype: float64"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +529,7 @@
        "112            1.0        131 111 81       185.0   45.0           6.0  concept  "
       ]
      },
-     "execution_count": 281,
+     "execution_count": 311,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +819,7 @@
        "Name: tags, dtype: object"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1028,7 @@
        "[5 rows x 89 columns]"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1052,7 @@
     "            tags_dict[key] = 1\n",
     "        tags.append(tags_dict)\n",
     "        # break\n",
-    "    tags = pd.DataFrame(data=tags, index=tags_series.index)\n",
+    "    tags = pd.DataFrame(data=tags, index=tags_series.index, dtype=np.int8)\n",
     "    renaming_cols = {key: 'tag_' + key for key in keys_set}\n",
     "    tags = tags.rename(columns=renaming_cols)\n",
     "    return tags\n",
@@ -1064,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1145,7 @@
        "Categories (4, object): [concept, intention, solving question, starter]"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1189,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -1238,101 +1236,101 @@
       "correct_answer                    1244 non-null uint8\n",
       "part_question                     1244 non-null uint8\n",
       "tags                              1244 non-null object\n",
-      "lecture_id                        1244 non-null float64\n",
-      "tag                               1244 non-null float64\n",
-      "part_lecture                      1244 non-null float64\n",
-      "type_of                           1244 non-null object\n",
-      "tag_1                             1244 non-null int64\n",
-      "tag_10                            1244 non-null int64\n",
-      "tag_100                           1244 non-null int64\n",
-      "tag_101                           1244 non-null int64\n",
-      "tag_102                           1244 non-null int64\n",
-      "tag_104                           1244 non-null int64\n",
-      "tag_106                           1244 non-null int64\n",
-      "tag_107                           1244 non-null int64\n",
-      "tag_109                           1244 non-null int64\n",
-      "tag_111                           1244 non-null int64\n",
-      "tag_114                           1244 non-null int64\n",
-      "tag_116                           1244 non-null int64\n",
-      "tag_118                           1244 non-null int64\n",
-      "tag_119                           1244 non-null int64\n",
-      "tag_12                            1244 non-null int64\n",
-      "tag_122                           1244 non-null int64\n",
-      "tag_123                           1244 non-null int64\n",
-      "tag_131                           1244 non-null int64\n",
-      "tag_134                           1244 non-null int64\n",
-      "tag_135                           1244 non-null int64\n",
-      "tag_136                           1244 non-null int64\n",
-      "tag_137                           1244 non-null int64\n",
-      "tag_138                           1244 non-null int64\n",
-      "tag_141                           1244 non-null int64\n",
-      "tag_142                           1244 non-null int64\n",
-      "tag_143                           1244 non-null int64\n",
-      "tag_144                           1244 non-null int64\n",
-      "tag_147                           1244 non-null int64\n",
-      "tag_149                           1244 non-null int64\n",
-      "tag_155                           1244 non-null int64\n",
-      "tag_159                           1244 non-null int64\n",
-      "tag_16                            1244 non-null int64\n",
-      "tag_162                           1244 non-null int64\n",
-      "tag_163                           1244 non-null int64\n",
-      "tag_167                           1244 non-null int64\n",
-      "tag_171                           1244 non-null int64\n",
-      "tag_173                           1244 non-null int64\n",
-      "tag_174                           1244 non-null int64\n",
-      "tag_179                           1244 non-null int64\n",
-      "tag_18                            1244 non-null int64\n",
-      "tag_180                           1244 non-null int64\n",
-      "tag_181                           1244 non-null int64\n",
-      "tag_184                           1244 non-null int64\n",
-      "tag_185                           1244 non-null int64\n",
-      "tag_187                           1244 non-null int64\n",
-      "tag_19                            1244 non-null int64\n",
-      "tag_2                             1244 non-null int64\n",
-      "tag_21                            1244 non-null int64\n",
-      "tag_22                            1244 non-null int64\n",
-      "tag_27                            1244 non-null int64\n",
-      "tag_28                            1244 non-null int64\n",
-      "tag_29                            1244 non-null int64\n",
-      "tag_3                             1244 non-null int64\n",
-      "tag_30                            1244 non-null int64\n",
-      "tag_35                            1244 non-null int64\n",
-      "tag_36                            1244 non-null int64\n",
-      "tag_38                            1244 non-null int64\n",
-      "tag_41                            1244 non-null int64\n",
-      "tag_44                            1244 non-null int64\n",
-      "tag_48                            1244 non-null int64\n",
-      "tag_49                            1244 non-null int64\n",
-      "tag_5                             1244 non-null int64\n",
-      "tag_50                            1244 non-null int64\n",
-      "tag_52                            1244 non-null int64\n",
-      "tag_53                            1244 non-null int64\n",
-      "tag_55                            1244 non-null int64\n",
-      "tag_60                            1244 non-null int64\n",
-      "tag_62                            1244 non-null int64\n",
-      "tag_64                            1244 non-null int64\n",
-      "tag_67                            1244 non-null int64\n",
-      "tag_72                            1244 non-null int64\n",
-      "tag_73                            1244 non-null int64\n",
-      "tag_74                            1244 non-null int64\n",
-      "tag_78                            1244 non-null int64\n",
-      "tag_79                            1244 non-null int64\n",
-      "tag_8                             1244 non-null int64\n",
-      "tag_80                            1244 non-null int64\n",
-      "tag_81                            1244 non-null int64\n",
-      "tag_82                            1244 non-null int64\n",
-      "tag_84                            1244 non-null int64\n",
-      "tag_88                            1244 non-null int64\n",
-      "tag_89                            1244 non-null int64\n",
-      "tag_9                             1244 non-null int64\n",
-      "tag_90                            1244 non-null int64\n",
-      "tag_91                            1244 non-null int64\n",
-      "tag_92                            1244 non-null int64\n",
-      "tag_96                            1244 non-null int64\n",
-      "tag_97                            1244 non-null int64\n",
-      "tag_98                            1244 non-null int64\n",
-      "dtypes: float64(3), int16(2), int32(1), int64(90), object(2), uint16(1), uint32(2), uint8(5)\n",
-      "memory usage: 1000.9+ KB\n"
+      "lecture_id                        1244 non-null uint32\n",
+      "tag                               1244 non-null uint8\n",
+      "part_lecture                      1244 non-null uint8\n",
+      "type_of                           1244 non-null category\n",
+      "tag_1                             1244 non-null int8\n",
+      "tag_10                            1244 non-null int8\n",
+      "tag_100                           1244 non-null int8\n",
+      "tag_101                           1244 non-null int8\n",
+      "tag_102                           1244 non-null int8\n",
+      "tag_104                           1244 non-null int8\n",
+      "tag_106                           1244 non-null int8\n",
+      "tag_107                           1244 non-null int8\n",
+      "tag_109                           1244 non-null int8\n",
+      "tag_111                           1244 non-null int8\n",
+      "tag_114                           1244 non-null int8\n",
+      "tag_116                           1244 non-null int8\n",
+      "tag_118                           1244 non-null int8\n",
+      "tag_119                           1244 non-null int8\n",
+      "tag_12                            1244 non-null int8\n",
+      "tag_122                           1244 non-null int8\n",
+      "tag_123                           1244 non-null int8\n",
+      "tag_131                           1244 non-null int8\n",
+      "tag_134                           1244 non-null int8\n",
+      "tag_135                           1244 non-null int8\n",
+      "tag_136                           1244 non-null int8\n",
+      "tag_137                           1244 non-null int8\n",
+      "tag_138                           1244 non-null int8\n",
+      "tag_141                           1244 non-null int8\n",
+      "tag_142                           1244 non-null int8\n",
+      "tag_143                           1244 non-null int8\n",
+      "tag_144                           1244 non-null int8\n",
+      "tag_147                           1244 non-null int8\n",
+      "tag_149                           1244 non-null int8\n",
+      "tag_155                           1244 non-null int8\n",
+      "tag_159                           1244 non-null int8\n",
+      "tag_16                            1244 non-null int8\n",
+      "tag_162                           1244 non-null int8\n",
+      "tag_163                           1244 non-null int8\n",
+      "tag_167                           1244 non-null int8\n",
+      "tag_171                           1244 non-null int8\n",
+      "tag_173                           1244 non-null int8\n",
+      "tag_174                           1244 non-null int8\n",
+      "tag_179                           1244 non-null int8\n",
+      "tag_18                            1244 non-null int8\n",
+      "tag_180                           1244 non-null int8\n",
+      "tag_181                           1244 non-null int8\n",
+      "tag_184                           1244 non-null int8\n",
+      "tag_185                           1244 non-null int8\n",
+      "tag_187                           1244 non-null int8\n",
+      "tag_19                            1244 non-null int8\n",
+      "tag_2                             1244 non-null int8\n",
+      "tag_21                            1244 non-null int8\n",
+      "tag_22                            1244 non-null int8\n",
+      "tag_27                            1244 non-null int8\n",
+      "tag_28                            1244 non-null int8\n",
+      "tag_29                            1244 non-null int8\n",
+      "tag_3                             1244 non-null int8\n",
+      "tag_30                            1244 non-null int8\n",
+      "tag_35                            1244 non-null int8\n",
+      "tag_36                            1244 non-null int8\n",
+      "tag_38                            1244 non-null int8\n",
+      "tag_41                            1244 non-null int8\n",
+      "tag_44                            1244 non-null int8\n",
+      "tag_48                            1244 non-null int8\n",
+      "tag_49                            1244 non-null int8\n",
+      "tag_5                             1244 non-null int8\n",
+      "tag_50                            1244 non-null int8\n",
+      "tag_52                            1244 non-null int8\n",
+      "tag_53                            1244 non-null int8\n",
+      "tag_55                            1244 non-null int8\n",
+      "tag_60                            1244 non-null int8\n",
+      "tag_62                            1244 non-null int8\n",
+      "tag_64                            1244 non-null int8\n",
+      "tag_67                            1244 non-null int8\n",
+      "tag_72                            1244 non-null int8\n",
+      "tag_73                            1244 non-null int8\n",
+      "tag_74                            1244 non-null int8\n",
+      "tag_78                            1244 non-null int8\n",
+      "tag_79                            1244 non-null int8\n",
+      "tag_8                             1244 non-null int8\n",
+      "tag_80                            1244 non-null int8\n",
+      "tag_81                            1244 non-null int8\n",
+      "tag_82                            1244 non-null int8\n",
+      "tag_84                            1244 non-null int8\n",
+      "tag_88                            1244 non-null int8\n",
+      "tag_89                            1244 non-null int8\n",
+      "tag_9                             1244 non-null int8\n",
+      "tag_90                            1244 non-null int8\n",
+      "tag_91                            1244 non-null int8\n",
+      "tag_92                            1244 non-null int8\n",
+      "tag_96                            1244 non-null int8\n",
+      "tag_97                            1244 non-null int8\n",
+      "tag_98                            1244 non-null int8\n",
+      "dtypes: category(1), int16(2), int32(1), int64(1), int8(89), object(1), uint16(1), uint32(3), uint8(7)\n",
+      "memory usage: 213.9+ KB\n"
      ]
     }
    ],
