✨ feat(HW-2): Add ansewers analysis

--- a/HW_2/HW_2.ipynb
+++ b/HW_2/HW_2.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,9 @@
       "Timestamp max 687.1days min 15.3s mode 27714.0s\n",
       "Zero timestamp (or interaction = event, or garbage) amount 0, in percents: 0.00%\n",
       "Timestamps which are more than 1 hour amount 1137, in percents: 1.1%\n",
-      "Timestamps which are more than 1 day amount 1065, in percents: 1.1%\n"
+      "Timestamps which are more than 1 day amount 1065, in percents: 1.1%\n",
+      "Timestamps with correct answers: max 687 days, min 0 days, median 46 days\n",
+      "Timestamps with wrong answers: max 685 days, min 0 days, median 35 days\n"
      ]
     }
    ],
@@ -224,7 +226,15 @@
     "day_ts_len = len(timestamp_secs[timestamp_secs > 3600 * 24])\n",
     "print('Zero timestamp (or interaction = event, or garbage) amount {}, in percents: {:.2f}%'.format(zero_ts_len, calc_percents(dlen, zero_ts_len)))\n",
     "print('Timestamps which are more than 1 hour amount {}, in percents: {:.1f}%'.format(hour_ts_len, calc_percents(dlen, hour_ts_len)))\n",
-    "print('Timestamps which are more than 1 day amount {}, in percents: {:.1f}%'.format(day_ts_len, calc_percents(dlen, day_ts_len)))"
+    "print('Timestamps which are more than 1 day amount {}, in percents: {:.1f}%'.format(day_ts_len, calc_percents(dlen, day_ts_len)))\n",
+    "correct_ansewers = timestamp_secs[train['answered_correctly'] == 1]\n",
+    "wrong_ansewers = timestamp_secs[train['answered_correctly'] == 0]\n",
+    "print('Timestamps with correct answers: max {:.0f} days, min {:.0f} days, median {:.0f} days'.format(correct_ansewers.max()/(24*3600),\n",
+    "                                                                                 correct_ansewers.min()/(24*3600),\n",
+    "                                                                                 int(correct_ansewers.median()/(24*3600))))\n",
+    "print('Timestamps with wrong answers: max {:.0f} days, min {:.0f} days, median {:.0f} days'.format(wrong_ansewers.max()/(24*3600),\n",
+    "                                                                                 wrong_ansewers.min()/(24*3600),\n",
+    "                                                                                 int(wrong_ansewers.median()/(24*3600))))"
    ]
   },
   {
@@ -610,22 +620,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Value counts for prior_question_had_explanation\n",
       "1    1182\n",
       "0      62\n",
+      "Name: prior_question_had_explanation, dtype: int64\n",
+      "\n",
+      "Correct answers distrubition for question had explanation:\n",
+      "1    834\n",
+      "0     36\n",
+      "Name: prior_question_had_explanation, dtype: int64\n",
+      "Wrong answers distrubition for question had explanation:\n",
+      "1    348\n",
+      "0     26\n",
       "Name: prior_question_had_explanation, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "print(train['prior_question_had_explanation'].value_counts())\n",
-    "train['prior_question_had_explanation'] = train['prior_question_had_explanation'].astype(np.uint8)"
+    "print('Value counts for prior_question_had_explanation\\n{}\\n'.format(train['prior_question_had_explanation'].value_counts()))\n",
+    "train['prior_question_had_explanation'] = train['prior_question_had_explanation'].astype(np.uint8)\n",
+    "correct_ansewers = train['prior_question_had_explanation'][train['answered_correctly'] == 1]\n",
+    "wrong_ansewers = train['prior_question_had_explanation'][train['answered_correctly'] == 0]\n",
+    "print('Correct answers distrubition for question had explanation:\\n{}'.format(correct_ansewers.value_counts()))\n",
+    "print('Wrong answers distrubition for question had explanation:\\n{}'.format(wrong_ansewers.value_counts()))"
    ]
   },
   {
@@ -639,14 +663,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time min: 0 max: 272 mode: 17\n"
+      "Elapsed time min: 0 max: 272 mode: 17\n",
+      "Median elapsed time 20.0s max elapsed time 272s min elapsed time 2s for correct answers\n",
+      "Median elapsed time 22.0s max elapsed time 252s min elapsed time 0s for wrong answers\n"
      ]
     }
    ],
@@ -655,7 +681,14 @@
     "                                                  train['prior_question_elapsed_time'].max(),\n",
     "                                                  train['prior_question_elapsed_time'].mode()[0]))\n",
     "# train['prior_question_elapsed_time'].value_counts()\n",
-    "train['prior_question_elapsed_time'] = train['prior_question_elapsed_time'].astype(np.uint16)"
+    "train['prior_question_elapsed_time'] = train['prior_question_elapsed_time'].astype(np.uint16)\n",
+    "ac_and_et = train['prior_question_elapsed_time'][train['answered_correctly'] == 1]\n",
+    "print('Median elapsed time {}s max elapsed time {}s min elapsed time {}s for correct answers'.format(\n",
+    "    ac_and_et.median(), ac_and_et.max(), ac_and_et.min()))\n",
+    "\n",
+    "aw_and_et = train['prior_question_elapsed_time'][train['answered_correctly'] == 0]\n",
+    "print('Median elapsed time {}s max elapsed time {}s min elapsed time {}s for wrong answers'.format(\n",
+    "    aw_and_et.median(), aw_and_et.max(), aw_and_et.min()))"
    ]
   },
   {
@@ -704,25 +737,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10688.0    125\n",
-      "335.0       47\n",
-      "3852.0      46\n",
-      "185.0       38\n",
-      "5266.0      30\n",
+      "10688    125\n",
+      "335       47\n",
+      "3852      46\n",
+      "185       38\n",
+      "5266      30\n",
+      "Name: bundle_id, dtype: int64\n",
+      "\n",
+      "Correct answers value counts for differnt bundle id:\n",
+      "10688    94\n",
+      "335      35\n",
+      "3852     29\n",
+      "4118     20\n",
+      "185      20\n",
+      "6797     18\n",
+      "5266     17\n",
+      "761      16\n",
+      "7926     16\n",
+      "7920     16\n",
       "Name: bundle_id, dtype: int64\n"
      ]
     }
    ],
    "source": [
     "print(train['bundle_id'].value_counts().head())\n",
-    "train['bundle_id'] = train['bundle_id'].astype(np.uint32)"
+    "train['bundle_id'] = train['bundle_id'].astype(np.uint32)\n",
+    "print('\\nCorrect answers value counts for differnt bundle id:\\n{}'.format(\n",
+    "    train['bundle_id'][train['answered_correctly'] == 1].value_counts().nlargest(10)))"
    ]
   },
   {
@@ -770,27 +818,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.0    436\n",
-      "2.0    296\n",
-      "6.0    189\n",
-      "1.0    142\n",
-      "3.0     93\n",
-      "4.0     54\n",
-      "7.0     34\n",
+      "Value counts of question part:\n",
+      "5    436\n",
+      "2    296\n",
+      "6    189\n",
+      "1    142\n",
+      "3     93\n",
+      "4     54\n",
+      "7     34\n",
+      "Name: part_question, dtype: int64\n",
+      "\n",
+      "Value counts of correct answer for different question part:\n",
+      "5    286\n",
+      "2    228\n",
+      "6    122\n",
+      "1    100\n",
+      "3     64\n",
+      "4     43\n",
+      "7     27\n",
       "Name: part_question, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "print(train['part_question'].value_counts())\n",
-    "train['part_question'] = train['part_question'].astype(np.uint8)"
+    "print('Value counts of question part:\\n{}\\n'.format(train['part_question'].value_counts()))\n",
+    "train['part_question'] = train['part_question'].astype(np.uint8)\n",
+    "print('Value counts of correct answer for different question part:\\n{}'.format(\n",
+    "    train['part_question'][train['answered_correctly'] == 1].value_counts()))"
    ]
   },
   {
@@ -1080,21 +1141,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lecture id boundaries max: 13487.0 min 89.0\n"
+      "Lecture id boundaries max: 13487 min 89\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10688    94\n",
+       "335      35\n",
+       "3852     29\n",
+       "4118     20\n",
+       "185      20\n",
+       "6797     18\n",
+       "5266     17\n",
+       "7920     16\n",
+       "7926     16\n",
+       "761      16\n",
+       "Name: lecture_id, dtype: int64"
+      ]
+     },
+     "execution_count": 336,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "print('Lecture id boundaries max: {} min {}'.format(train['lecture_id'].max(),\n",
     "                train['lecture_id'].min()))\n",
-    "train['lecture_id'] = train['lecture_id'].astype(np.uint32)"
+    "train['lecture_id'] = train['lecture_id'].astype(np.uint32)\n",
+    "train['lecture_id'][train['answered_correctly'] == 1].value_counts().nlargest(10)"
    ]
   },
   {
@@ -1130,29 +1212,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18     concept\n",
-       "23     concept\n",
-       "30     concept\n",
-       "95     concept\n",
-       "112    concept\n",
-       "Name: type_of, dtype: category\n",
-       "Categories (4, object): [concept, intention, solving question, starter]"
+       "concept             528\n",
+       "solving question    307\n",
+       "intention            34\n",
+       "starter               1\n",
+       "Name: type_of, dtype: int64"
       ]
      },
-     "execution_count": 325,
+     "execution_count": 334,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train['type_of'] = pd.Categorical(train['type_of'])\n",
-    "train['type_of'].head()"
+    "train['type_of'].head()\n",
+    "train['type_of'][train['answered_correctly'] == 1].value_counts()"
    ]
   },
   {
@@ -1187,20 +1268,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tag max value 182.0 \n"
+      "Tag max value 182 \n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "39     94\n",
+       "114    35\n",
+       "161    29\n",
+       "93     27\n",
+       "101    26\n",
+       "8      20\n",
+       "45     20\n",
+       "1      19\n",
+       "70     18\n",
+       "123    18\n",
+       "Name: tag, dtype: int64"
+      ]
+     },
+     "execution_count": 332,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "print('Tag max value {} '.format(train['tag'].max()))\n",
-    "train['tag'] = train['tag'].astype(np.uint8)"
+    "train['tag'] = train['tag'].astype(np.uint8)\n",
+    "train['tag'][train['answered_correctly'] == 1].value_counts().nlargest(10)"
    ]
   },
   {
